--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,13 @@
         <!-- add ui-router source (after angular source) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="/scripts/fixtures.js"></script>
 
-        <script src="scripts/controllers/LandingCtrl.js"></script>
+        <!-- link LandingCtrl.js to script source -->
+        <script src="/scripts/controllers/LandingCtrl.js"></script>
+        <!-- add CollectionCtrl script source -->
+        <script src="/scripts/controllers/CollectionCtrl.js"></script>
+
 
     </body>
 </html>
