Checkpoint 6 Services-Part I completed

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,9 @@
         <!-- add ui-router source (after angular source) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
         <script src="/scripts/app.js"></script>
-        <script src="/scripts/fixtures.js"></script>
+        <!-- delete fixtures.js, use services/ Fixtures.js as source (getting album info by service) -->
+        <!-- <script src="/scripts/fixtures.js"></script> -->
+         <script src="/scripts/services/Fixtures.js"></script>
 
         <!-- link LandingCtrl.js to script source -->
         <script src="/scripts/controllers/LandingCtrl.js"></script>
