--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
         <!-- add ui-router source (after angular source) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
         <script src="/scripts/app.js"></script>
         <!-- delete fixtures.js, use services/ Fixtures.js as source (getting album info by service) -->
         <!-- <script src="/scripts/fixtures.js"></script> -->
          <script src="/scripts/services/Fixtures.js"></script>
+         <!--add SongPlayer source link  -->
+         <script src="/scripts/services/SongPlayer.js"></script>
 
         <!-- link LandingCtrl.js to script source -->
         <script src="/scripts/controllers/LandingCtrl.js"></script>
