--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/landing.css">
+
+        <link rel="stylesheet" type="text/css" href="styles/album.css">
+        <link rel="stylesheet" type="text/css" href="styles/collection.css">
+        <link rel="stylesheet" type="text/css" href="styles/player_bar.css">
     </head>
     <body class="landing">
         <nav class="navbar">
@@ -43,6 +47,7 @@
         <script src="/scripts/controllers/CollectionCtrl.js"></script>
         <!-- add AlbumCtrl.js script source -->
         <script src="/scripts/controllers/AlbumCtrl.js"></script>
+        <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
 
     </body>
 </html>
